# Lagrangian-fluid-simulation-for-Android

./: .gitignore  LICENSE  README.md  configure.sh
documentation/: Doxyfile  readme.md
documentation/html/: android__logging_8h_source.html  annotated.html  classFileReader-members.html  classFileReader.html  classFileReader__inherit__graph.map  classFileReader__inherit__graph.md5  classGLShaderManager-members.html  classGLShaderManager.html  classGLShaderManager__coll__graph.dot  classGLShaderManager__coll__graph.map  classGLShaderManager__coll__graph.md5  classMatrix4x4-members.html  classMatrix4x4.html  classNetCDFReader-members.html  classNetCDFReader.html  classNetCDFReader__coll__graph.map  classNetCDFReader__coll__graph.md5  classParticle-members.html  classParticle.html  classParticle__coll__graph.dot  classParticle__coll__graph.map  classParticle__coll__graph.md5  classParticlesHandler-members.html  classParticlesHandler.html  classParticlesHandler__coll__graph.dot  classParticlesHandler__coll__graph.map  classParticlesHandler__coll__graph.md5  classTouchHandler-members.html  classTouchHandler.html  classTouchHandler__coll__graph.dot  classTouchHandler__coll__graph.map  classTouchHandler__coll__graph.md5  classTriple-members.html  classTriple.html  classVectorFieldHandler-members.html  classVectorFieldHandler.html  classes.html  dir_04f458e5436b854252e4d06b655936e1.html  dir_3dd7d7d0169ea44dd2a64ebcab748721.html  dir_6fa67d6b5e160bfb999cd66da9b41bbb.html  (+39 more)
documentation/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  searchdata.js
documentation/latex/: annotated.tex  classFileReader.tex  classFileReader__inherit__graph.md5  classGLShaderManager.tex  classGLShaderManager__coll__graph.dot  classGLShaderManager__coll__graph.md5  classMatrix4x4.tex  classNetCDFReader.tex  classNetCDFReader__inherit__graph.md5  classParticle.tex  classParticle__coll__graph.dot  classParticle__coll__graph.md5  classParticlesHandler.tex  classParticlesHandler__coll__graph.dot  classParticlesHandler__coll__graph.md5  classTouchHandler.tex  classTouchHandler__coll__graph.dot  classTouchHandler__coll__graph.md5  classTriple.tex  classVectorFieldHandler.tex  hierarchy.tex  refman.tex  structImageData.tex  structTouchPoint.tex
simulation/: .gitignore  README.md  TODO.md  capture_logs.sh  continous6.txt  settings.gradle.kts
simulation/app/: build.gradle.kts
simulation/app/release/: output-metadata.json
simulation/app/release/baselineProfiles/0/: app-release.dm
simulation/app/release/baselineProfiles/1/: app-release.dm
simulation/app/src/main/: AndroidManifest.xml
simulation/app/src/main/assets/: compute_shader.glsl  fragment_shader.glsl  fragment_shader_lines.glsl  fragment_shader_lis.glsl  fragment_shader_points.glsl  fragment_shader_ui.glsl  geometry_lines_shader.glsl  geometry_points_shader.glsl  vertex_shader.glsl  vertex_shader_box.glsl  vertex_shader_points.glsl  vertex_shader_ui.glsl
simulation/app/src/main/assets/test_data/: test.nc
simulation/app/src/main/assets/textures/: pt_tex_debug.tga  (+4 more)
simulation/app/src/main/cpp/: .gitignore  CMakeLists.txt  EGLContextManager.cpp  EGLContextManager.h  README.md  ThreadPool.h  android_logging.h  config.txt  consts.h  file_reader.cpp  hdf5_reader.cpp  hdf5_reader.h  mainview.cpp  mainview.h  matrix.cpp  matrix.h  native-lib.cpp  netcdf_reader.cpp  netcdf_reader.h  particle.cpp  particle.h  particles_handler.cpp  particles_handler.h  physics.cpp  physics.h  png_loader.cpp  png_loader.h  shaderManager.cpp  task_scheduler.cpp  task_scheduler.h  test_read_nc.c  test_read_nc.h  timer.cpp  timer.h  touch_handler.cpp  touch_handler.h  transforms.cpp  transforms.h  triple.cpp  triple.h  (+2 more)
simulation/app/src/main/cpp/include/: EGLContextManager.h  ThreadPool.h  android_logging.h  consts.h  cpu_timer.h  file_reader.h  gpu_timer.h  mainview.h  navig_cube.h  netcdf_reader.h  outline_box.h  particle.h  particles_handler.h  physics.h  png_loader.h  shaderManager.h  timer.h  touch_handler.h  transforms.h  vector_field_handler.h
simulation/app/src/main/cpp/netcdf/: netcdf_meta.h
simulation/app/src/main/cpp/src/: EGLContextManager.cpp  android_main.cpp  file_reader.cpp  mainview.cpp  native-lib.cpp  netcdf_reader.cpp  particle.cpp  particles_handler.cpp  physics.cpp  png_loader.cpp  shaderManager.cpp  timer.cpp  touch_handler.cpp  transforms.cpp  vector_field_handler.cpp
simulation/gradle/: libs.versions.toml
simulation/gradle/wrapper/: gradle-wrapper.properties
simulation/measurements/files/: 1.measurement.plan  continous2.txt  continous3.txt  continous4.txt  continuous10.txt  continuous5.txt  continuous7.txt  continuous8.txt  continuous9.txt  logs_1000000_computeShaders0.txt  logs_1000000_computeShaders1.txt  logs_1000000_parallel0.txt  logs_1000000_parallel1.txt  logs_1000000_sequential0.txt  logs_1000000_sequential1.txt  logs_10000_computeShaders0.txt  logs_10000_computeShaders1.txt  logs_10000_parallel0.txt  logs_10000_parallel1.txt  logs_10000_sequential0.txt  logs_10000_sequential1.txt  logs_125_computeShaders0.txt  logs_125_computeShaders1.txt  logs_125_parallel0.txt  logs_125_parallel1.txt  logs_125_parallel2.txt  logs_125_sequential0.txt  logs_125_sequential1.txt  logs_1500_computeShaders0.txt  logs_1500_computeShaders1.txt  logs_1500_computeShaders2.txt  logs_1500_computeShaders3.txt  logs_1500_computeShaders4.txt  logs_1500_computeShaders5.txt  logs_1500_computeShaders6.txt  logs_1500_computeShaders7.txt  logs_1500_computeShaders8.txt  logs_1500_parallel0.txt  logs_1500_parallel1.txt  logs_1500_parallel2.1.txt  (+319 more)
simulation/measurements/scripts/: capture_logs.sh  start_app.sh  take_all_measurements.sh
utils/: .gitignore  display_field.ipynb  display_netcdf.ipynb  gen_test_nc.py  process_better_data.ipynb  process_better_data2.ipynb  process_better_data2_loader.ipynb  process_better_data_long.ipynb  process_data.ipynb  split_netcdf_file.py  uniform.nc  uniform_random.nc  view_netcdf.py
(+21 files in other folders)
